# buildben

./: .envrc  .gitignore  CHANGELOG.md  README.md  TODO.md  justfile  pylock.toml  pyproject.toml  setup.sh
assets/: classdiagram.mmd  diagram-simple.puml  diagram.puml  flowchart.mmd  presentation.md
assets/figures/: _buildben_figures.py  diagram-simple.puml  diagram.puml  diagram_graphviz.py  diagram_simple_graphviz.py  graphical-abstract_init-proj.puml  graphical_abstract_init_proj_graphviz.py  render_all_figs.py  render_diagram.py  render_diagram_simple.py  render_graphical_abstract_init_proj.py  render_graphviz_figures.py
assets/figures/graphviz_support/: __init__.py  drawing.py  labels.py  models.py  rendering.py
assets/old/: classdiagram.mmd
assets/presentation/: markurs-theme.css  markurstheme.css  presentation.md  presentation_tmp.html
src/buildben/: add_experim.py  cli.py  env_snapshot.py  env_snapshot.sh  init_data.py  init_database.py  init_experim.py  init_experiment.sh  init_proj.py  setup_zsh.sh  snapshot_.sh  utils.py
src/buildben/_templates/: _MANIFEST.in  _gitignore
src/buildben/_templates_experim/: _REPORT.md  _envrc  _paths.env  _run.py  _run.py.tmpl  _scripts_eval.py  _scripts_eval.py.tmpl  _scripts_exp.py  _scripts_exp.py.tmpl
src/buildben/_templates_proj/: _.CHANGELOG.md  _.codex_config.toml  _.env.template  _.envrc  _.envrc.private  _AGENTS.md  _CHANGELOG.md  _README.IGNORE.md  _TODO.md  _assets_diagram.IGNORE.puml  _assets_flowchart.IGNORE.mmd  _docs-Development.md  _docs-Explanations.md  _docs-How-To-User-Guides.md  _docs-README.md  _docs-References.md  _env.sh  _envrc  _github-CI_ubuntu_uv.yml  _github-codecov.yml  _gitignore  _justfile  _main.py  _pyproject.toml  _src-__main__.py.tmpl  _src-cli-app.py  _src-config-app.py  _src-config-app.py.tmpl  _src-config-env.shared  _src-config-init.py  _src-config-init.py.tmpl  _src-config-owners.py  _src-config-owners.py.tmpl  _src-env_boot.py  _src-main.py  _src-paths.py  _src_env.py  _src_main.py  _utils-__init__.py  _utils-path_resolver.py  (+3 more)
src/buildben/templates/: _README.bb_template.md  _README.md  _classdiagram.bb_template.mmd  _classdiagram.mmd  _codecov.yml  _diagram.bb_template.puml  _envrc  _gitignore  _justfile  _pyproject.toml
tests/: test_init_proj.py
tools/render_figures/: all_figs.py  diagram-simple.py  diagram.py  graphical-abstract_init-proj.py
tools/render_figures/_shared/: __init__.py
tools/render_figures/_shared/graphviz/: __init__.py  drawing.py  labels.py  models.py  rendering.py  theme.py
