# =====================================================================
# === Build backend & settings
# =====================================================================
[build-system]
requires      = ["setuptools>=68", "wheel"]        # or "hatchling", "flit_core", etc.
build-backend = "setuptools.build_meta"

# =====================================================================
# === Project metadata (PEP 621)
# =====================================================================
[project]
name        = "buildben"          # < will be replaced by scaffold script
version     = "0.1.0"
description = "Developer CLI helpers (init-project, etc.)"
authors     = [{ name = "markur4", email = "you@example.com" }]
readme      = "README.md"
license     = "MIT"
requires-python = ">=3.12"
dependencies = [        ### Most shall run on the std-lib!
    # "pip-tools>=7.4",   # < Installed in .direnv venv
    # "pytest>=8.2",
    # "pytest-xdist",     # < Multi-core testing
    # "pytest-cov",       # < Code-Coverage
]


# =====================================================================
# === Packaging
# =====================================================================

# === src-layout switches =======
[tool.setuptools]
package-dir = { "" = "src" }          # < Root package lives in src/

[tool.setuptools.packages.find]
where = ["src"]                       # < Scan only src/ for packages
# namespaces = true                     # < Implicit namespace packages ok

# === Include data *inside* the package =======
[tool.setuptools.package-data]
"buildben" = [
    "**/*.sh",         # src/buildben/**/*.sh/
    "_templates_proj/**/*",  # src/buildben/templates/**/*
    "_templates_experiment/**/*",  # src/buildben/templates/**/*
    ]


# =====================================================================
# === Extra Dependencies 
# =====================================================================

# [project.optional-dependencies]
### pip install -e .[dev]
# dev = [
#     # --- Packaging helpers ------------
#     "pip-tools>=7.4",   # < Installed in .direnv venv
#     # --- Testing ----------------------
#     "pytest>=8.2",
#     "pytest-xdist",     # < Multi-core testing
#     "pytest-cov",       # < Code-Coverage
#     # --- Linting / formatting ---------
#     # "black>=25.1",
#     # "ruff>=0.4",
#     # "mypy>=1.10",
# ]

# =====================================================================
# === Terminal entry points
# =====================================================================

[project.scripts]
buildben = "buildben.cli:main"


# =====================================================================
# === Tool configurations
# =====================================================================

[tool.pip-tools]
generate-hashes = true
requirement-files = ["requirements.txt"]