# =====================================================================
# === Build backend & settings
# =====================================================================
[build-system]
requires      = ["setuptools>=68", "wheel"]        # or "hatchling", "flit_core", etc.
build-backend = "setuptools.build_meta"

# =====================================================================
# === Project metadata (PEP 621)
# =====================================================================
[project]
name        = "buildben"          # < will be replaced by scaffold script
version     = "0.2.0"
description = "Developer CLI helpers (init-project, etc.)"
authors     = [{ name = "markur4", email = "you@example.com" }]
readme      = "README.md"
license     = "MIT"
requires-python = ">=3.12"
dependencies = []
# !! Dependencies would clutter the OS-Python!
# !! We can't call pipx from pyproject.toml!
# dependencies = []  # !! -> LEAVE EMPTY !!!

# =====================================================================
# === Optional Feature Dependencies
# =====================================================================

# Optional dependencies are published package extras. Use them for feature
# stacks that users may want at runtime, but that should not be installed by
# default. Keep heavy feature sets here, not in [dependency-groups].
#
# Install commands:
#   python -m pip install -e ".[rag]"
#   uv sync --locked --all-extras --no-default-groups
#
# [project.optional-dependencies]
# rag = [
#     # "huggingface-hub",  # < Hugging Face model/data downloads
#     # "openai",           # < OpenAI API client
#     # "tiktoken",         # < Token counting for OpenAI-compatible models
#     # "scikit-learn",     # < Vectorizers, metrics, and classical ML helpers
#     # "torch",            # < Heavy tensor/ML runtime
# ]


# =====================================================================
# === Local Dependency Groups
# =====================================================================

# Dependency groups are local-only development environments. Build backends do
# not publish them as package metadata, so they are the right home for pytest,
# ruff, pyright, notebooks, profiling, and docs helpers.
#
# Install commands:
#   python -m pip install -e "." --group dev
#   python -m pip install -e ".[rag]" --group dev
#   uv sync --locked --all-groups
#   uv sync --locked --all-extras --all-groups
[dependency-groups]
dev = [
    # --- Testing ----------------------
    "pytest>=9.0.2",
    "pytest-xdist",     # < Multi-core testing
    "typer",            # < Scaffold CLI smoke tests
    # "pytest-cov",       # < Code-Coverage
    # --- Code-Quality ---------
    "pyright>=1.1",  # < Type checker
    "ruff>=0.4",    # < Linter and formatter
    # --- Code-Optimization -------------
    "pyinstrument>=5.1",  # < Low-overhead profiling reports
    # --- Visualization ---------
    # "matplotlib",
    # "seaborn",
    "graphviz",
    "pillow",
]


# =====================================================================
# === Packaging
# =====================================================================

# === src-layout switches =======
[tool.setuptools]
package-dir = { "" = "src" }          # < Root package lives in src/

[tool.setuptools.packages.find]
where = ["src"]                       # < Scan only src/ for packages
# namespaces = true                     # < Implicit namespace packages ok

# === Include data *inside* the package =======
[tool.setuptools.package-data]
"buildben" = [
    "**/*.sh",         # src/buildben/**/*.sh/
    "_templates_proj/**/*",  # src/buildben/templates/**/*
    "_templates_experim/**/*",  # src/buildben/templates/**/*
    ]

# =====================================================================
# === Terminal entry points
# =====================================================================

[project.scripts]
buildben = "buildben.cli:main"
bube = "buildben.cli:main"


# =====================================================================
# === Tool configurations
# =====================================================================

[tool.pytest.ini_options]
addopts = "-n 6"  # < Use 6 cores
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    "*.egg-info",
]
